--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -335,6 +335,59 @@ a:hover:after {
   }
 }
 
+@media screen and (max-width: 428px) {
+  /* Header */
+  header {
+    height: 10vh;
+  }
+
+  /* Navbar Section */
+  nav {
+    width: 100vw;
+  }
+  
+  nav .wrapper {
+    padding: 0 20px;
+  }
+  
+  .wrapper .logo a {
+    font-size: 17px;
+    font-weight: 500;
+  }
+
+  /* Links */
+  a {
+    font-size: 12px;
+    padding: 1px 5px;
+  }
+  
+  .socials > a > img {
+    width: 15px;
+    height: 15px;
+  }
+  
+  .contact__section {
+    padding: 20px;
+  }
+
+  .contact__section .row h1 {
+    font-size: 200%;
+    font-weight: normal;
+    text-align: center;
+  }
+
+  .contact__section .row p {
+    font-size: 130%;
+    text-align: center;
+  }
+  
+  /* Footer Section */
+  .footer .row .col {
+    font-size: 90%;
+    text-align: center;
+  }
+}
+
 @media screen and (max-width: 414px) {
   /* Header */
   header {
@@ -388,6 +441,161 @@ a:hover:after {
   }
 }
 
+@media screen and (max-width: 412px) {
+  /* Header */
+  header {
+    height: 10vh;
+  }
+
+  /* Navbar Section */
+  nav {
+    width: 100vw;
+  }
+  
+  nav .wrapper {
+    padding: 0 20px;
+  }
+  
+  .wrapper .logo a {
+   	font-size: 15px;
+		font-weight: 500;
+  }
+
+  /* Links */
+  a {
+   	font-size: 12px;
+   	padding: 1px 5px;
+  }
+  
+  .socials > a > img {
+    width: 15px;
+    height: 15px;
+  }
+  
+  .contact__section {
+    padding: 20px;
+  }
+
+  .contact__section .row h1 {
+    font-size: 200%;
+    font-weight: normal;
+    text-align: center;
+  }
+
+  .contact__section .row p {
+    font-size: 130%;
+    text-align: center;
+  }
+  
+  /* Footer Section */
+  .footer .row .col {
+    font-size: 80%;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  /* Header */
+  header {
+    height: 10vh;
+  }
+
+  /* Navbar Section */
+  nav {
+    width: 105vw;
+  }
+  
+  nav .wrapper {
+    padding: 0 28px;
+  }
+  
+  .wrapper .logo a {
+    font-size: 16px;
+    margin-left: -20px;
+  }
+
+  /* Links */
+  a {
+    font-size: 12px;
+    padding: 0px 4px;
+  }
+  
+  .socials > a > img {
+    width: 15px;
+    height: 15px;
+  }
+  
+  .contact__section {
+    padding: 20px;
+  }
+
+  .contact__section .row h1 {
+    font-size: 200%;
+    font-weight: normal;
+  }
+
+  .contact__section .row p {
+    font-size: 130%;
+  }
+  
+  /* Footer Section */
+  .footer .row .col {
+    font-size: 90%;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 384px) {
+  /* Header */
+  header {
+    height: 10vh;
+  }
+
+  /* Navbar Section */
+  nav {
+    width: 105vw;
+  }
+  
+  nav .wrapper {
+    padding: 0 28px;
+  }
+  
+  .wrapper .logo a {
+    font-size: 16px;
+    margin-left: -20px;
+  }
+
+  /* Links */
+  a {
+    font-size: 12px;
+    padding: 0px 4px;
+  }
+  
+  .socials > a > img {
+    width: 15px;
+    height: 15px;
+  }
+  
+  .contact__section {
+    padding: 20px;
+  }
+
+  .contact__section .row h1 {
+    font-size: 200%;
+    font-weight: normal;
+  }
+
+  .contact__section .row p {
+    font-size: 130%;
+  }
+  
+  /* Footer Section */
+  .footer .row .col {
+    font-size: 90%;
+    text-align: center;
+  }
+}
+
 @media screen and (max-width: 375px) {
   /* Header */
   header {
@@ -435,6 +643,56 @@ a:hover:after {
   /* Footer Section */
   .footer .row .col {
     font-size: 100%;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  /* Header */
+  header {
+    height: 10vh;
+  }
+
+  /* Navbar Section */
+  nav {
+    width: 105vw;
+  }
+  
+  nav .wrapper {
+    padding: 0 28px;
+  }
+  
+  .wrapper .logo a {
+    font-size: 15px;
+  }
+
+  /* Links */
+  a {
+    font-size: 11px;
+    padding: 0px 4px;
+  }
+  
+  .socials > a > img {
+    width: 15px;
+    height: 15px;
+  }
+  
+  .contact__section {
+    padding: 20px;
+  }
+
+  .contact__section .row h1 {
+    font-size: 200%;
+    font-weight: normal;
+  }
+
+  .contact__section .row p {
+    font-size: 130%;
+  }
+  
+  /* Footer Section */
+  .footer .row .col {
+    font-size: 80%;
     text-align: center;
   }
 }
