--- a/assets/css/work.css
+++ b/assets/css/work.css
@@ -192,6 +192,48 @@ a:hover:after {
 	}
 }
 
+@media only screen and (max-width: 428px) {
+  header {
+    height: 10vh;
+  }
+
+  /* Navbar Section */
+  nav {
+   	line-height: 70px;
+   	width: 100vw;
+  }
+  
+  nav .wrapper {
+   	padding: 0 20px;
+  }
+  
+  .wrapper .logo a {
+   	font-size: 15px;
+		font-weight: 500;
+  }
+
+  /* Links */
+  a {
+   	font-size: 11px;
+   	padding: 0px 4px;
+  }
+  
+  .socials > a > img {
+   	width: 15px;
+   	height: 15px;
+  }
+
+  .container > img { 
+    padding: 5px;
+  }
+
+  /* Footer Section */
+	.footer .row .col {
+		font-size: 80%;
+    text-align: center;
+	}
+}
+
 @media only screen and (max-width: 414px) {
   header {
     height: 10vh;
@@ -229,7 +271,91 @@ a:hover:after {
 
   /* Footer Section */
 	.footer .row .col {
-		font-size: 100%;
+		font-size: 90%;
+    text-align: center;
+	}
+}
+
+@media only screen and (max-width: 412px) {
+  header {
+    height: 10vh;
+  }
+
+  /* Navbar Section */
+  nav {
+   	line-height: 70px;
+   	width: 100vw;
+  }
+  
+  nav .wrapper {
+   	padding: 0 20px;
+  }
+  
+  .wrapper .logo a {
+   	font-size: 15px;
+		font-weight: 500;
+  }
+
+  /* Links */
+  a {
+   	font-size: 12px;
+   	padding: 1px 5px;
+  }
+  
+  .socials > a > img {
+   	width: 15px;
+   	height: 15px;
+  }
+
+  .container > img { 
+    padding: 5px;
+  }
+
+  /* Footer Section */
+	.footer .row .col {
+		font-size: 80%;
+    text-align: center;
+	}
+}
+
+@media only screen and (max-width: 390px) {
+  header {
+    height: 10vh;
+  }
+
+  /* Navbar Section */
+  nav {
+   	line-height: 70px;
+   	width: 100vw;
+  }
+  
+  nav .wrapper {
+   	padding: 0 20px;
+  }
+  
+  .wrapper .logo a {
+   	font-size: 16px;
+		font-weight: 500;
+  }
+
+  /* Links */
+  a {
+   	font-size: 11px;
+   	padding: 0px 4px;
+  }
+  
+  .socials > a > img {
+   	width: 15px;
+   	height: 15px;
+  }
+
+  .container > img { 
+    padding: 5px;
+  }
+
+  /* Footer Section */
+	.footer .row .col {
+		font-size: 80%;
     text-align: center;
 	}
 }
@@ -275,7 +401,53 @@ a:hover:after {
   
   /* Footer Section */
   .footer .row .col {
-	  font-size: 100%;
+	  font-size: 80%;
     text-align: center;
   }
 }
+
+@media only screen and (max-width: 360px) {
+  /* Header */
+  header {
+    height: 10vh;
+  }
+
+  /* Navbar Section */
+  nav {
+    width: 105vw;
+  }
+  
+  nav .wrapper {
+    padding: 0 28px;
+  }
+  
+  .wrapper .logo a {
+    font-size: 15px;
+  }
+
+  /* Links */
+  a {
+    font-size: 11px;
+    padding: 0px 4px;
+  }
+  
+  .socials > a > img {
+    width: 15px;
+    height: 15px;
+  }
+  
+  .container {
+    column-count: 1;
+  }
+
+  .container > img { 
+    margin-bottom: 50px;
+  }
+  
+  /* Footer Section */
+  .footer .row .col {
+	  font-size: 80%;
+    text-align: center;
+  }
+}
+
