--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -4,6 +4,11 @@
 	box-sizing: border-box;
 }
 
+body {
+	font-family: 'Raleway', sans-serif;
+	font-size: 14px;
+}
+
 section {
 	padding: 20px 250px;
 }
@@ -17,23 +22,26 @@ section > div {
 }
 
 h1 {
-	font-size: 5rem;
+	font-size: 4rem;
+	text-align: center;
 }
 
 h2 {
-	font-size: 3.5rem;
+	font-size: 2.5rem;
+	text-align: center;
 	padding-bottom: 2rem;
 }
 
 h3 {
-	font-size: 2rem;
-	font-weight: 800;
+	font-size: 1.5rem;
+	font-weight: 600;
 	padding-top: 1rem;
 }
 
 p {
 	font-size: 1.1rem;
-	font-weight: light;
+	font-weight: 200;
+	list-style: 1.5;
 }
 
 /* Header */
@@ -62,8 +70,8 @@ nav .wrapper {
 
 .wrapper .logo a {
 	text-decoration: none;
-	font-size: 27px;
-	font-weight: bold;
+	font-size: 37px;
+	font-weight: 700;
 }
 
 .nav-links {
@@ -77,8 +85,7 @@ nav .wrapper {
 a {
 	color: #000000;
 	text-decoration: none;
-	font-size: 18px;
-	font-weight: 500;
+	font-weight: 600;
 	padding: 9px 15px;
 	border-radius: 5px;
 	transition: all 0.3s ease;
@@ -100,12 +107,8 @@ a:after {
 }
 
 a:hover:after { 
-	width: 100%; 
+	width: 85%;
 	left: 0; 
-}
-
-p {
-	line-height: 1.5;
 }
 
 .exhibitions {
@@ -131,11 +134,12 @@ p {
 /* -------- Footer Section ------ */
 .footer .row .col {
 	padding: 8%;
-	font-size: 120%;
+	font-size: 100%;
 }
 
 .footer__section {
 	color: #000000;
+	font-weight: 600;
 }
 
 .contacts {
@@ -195,6 +199,7 @@ p {
 
 	p {
 		font-size: 1.5rem;
+		font-weight: 200;
 	}
 
 	.wrapper > .logo > a {
@@ -212,6 +217,10 @@ p {
 	.footer .row .col {
 		padding: 6%;
 		font-size: 100%;
+	}
+
+	.footer__section {
+		font-weight: 600;
 	}
 }
 
@@ -276,6 +285,7 @@ p {
 
 	p {
 		font-size: 1.6rem;
+		font-weight: 200;
 	}
 
 	.exhibitions {
@@ -291,6 +301,96 @@ p {
 	.footer .row .col {
 		padding: 3.5%;
 		font-size: 100%;
+	}
+
+	.footer__section {
+		font-weight: 600;
+	}
+}
+
+@media only screen and (max-width: 810px) {
+	header {
+    	height: 10vh;
+  	}
+
+  	/* Navbar Section */
+  	nav {
+    	line-height: 90px;
+    	width: 100vw;
+  	}
+
+  	nav .wrapper {
+    	padding: 0 28px;
+  	}
+
+  	.wrapper .logo a {
+    	font-size: 37px;
+		font-weight: 700;
+  	}
+
+  	/* Links */
+  	a {
+  		font-size: 1rem;
+  		font-weight: 400;
+    	padding: 1px 8px;
+  	}
+
+  	.socials > a > img {
+    	width: 15px;
+    	height: 15px;
+  	}
+
+	section {
+		padding: 10px 25px;
+		overflow: hidden;
+	}
+
+	section > div {
+		padding: 3rem 3rem;
+	}
+
+	h1 {
+		font-size: 3rem;
+		text-align: center;
+		font-weight: 600;
+	}
+
+	h2 {
+		font-size: 2.5rem;
+		font-weight: 600;
+		padding-bottom: 2rem;
+		text-align: center;
+	}
+
+	h3 {
+		font-size: 1.5rem;
+		font-weight: 600;
+		padding-top: 1rem;
+	}
+
+	p {
+		font-size: 1.1rem;
+		font-weight: 200;
+	}
+
+	.exhibitions {
+    	font-size: 1.5rem;
+    	font-weight: 600;
+	}
+
+	.quote blockquote, .quote figcaption {
+		font-size: 1.1rem;
+		font-weight: 100;
+	}
+
+  	/* Footer Section */
+	.footer .row .col {
+		padding: 3.5%;
+		font-size: 100%;
+	}
+
+	.footer__section {
+		font-weight: 600;
 	}
 }
 
@@ -331,6 +431,7 @@ p {
 
 	p {
 		font-size: 1.5rem;
+		font-weight: 200;
 	}
 
 	.wrapper > .logo > a {
@@ -348,6 +449,10 @@ p {
 	.footer .row .col {
 		padding: 3%;
 		font-size: 90%;
+	}
+
+	.footer__section {
+		font-weight: 600;
 	}
 }
 
@@ -394,12 +499,17 @@ p {
 
 	p {
 		font-size: 1rem;
+		font-weight: 200;
 	}
 
   	/* Footer Section */
 	.footer .row .col {
 		text-align: center;
 		font-size: 100%;
+	}
+
+	.footer__section {
+		font-weight: 600;
 	}
 }
 
@@ -415,18 +525,17 @@ p {
   	}
   
   	nav .wrapper {
-    	padding: 0 20px;
+    	padding: 0 25px;
   	}
   
   	.wrapper .logo a {
-    	font-size: 17px;
-		font-weight: 500;
+    	font-size: 23px;
+		font-weight: 600;
   	}
 
   	/* Links */
   	a {
-    	font-size: 12px;
-    	padding: 1px 5px;
+    	padding: 1px 6px;
   	}
   
   	.socials > a > img {
@@ -444,37 +553,42 @@ p {
 	}
 
 	h1 {
-		font-size: 3rem;
+		font-size: 2.5rem;
 		text-align: center;
-		font-weight: normal;
+		font-weight: 600;
 	}
 
 	h2 {
 		font-size: 1.8rem;
-		font-weight: normal;
+		font-weight: 600;
 		padding-bottom: 2rem;
 		text-align: center;
 	}
 
 	h3 {
 		font-size: 1.5rem;
-		font-weight: 800;
+		font-weight: 600;
 		padding-top: 1rem;
 	}
 
 	p {
-		font-size: 1.1rem;
+		font-size: 1rem;
+		font-weight: 200;
 	}
 
 	.exhibitions {
     	font-size: 1.5rem;
-    	font-weight: 800;
+    	font-weight: 600;
 	}
 
   	/* Footer Section */
 	.footer .row .col {
 		text-align: center;
 		font-size: 100%;
+	}
+
+	.footer__section {
+		font-weight: 600;
 	}
 }
 
@@ -494,13 +608,14 @@ p {
   	}
   
   	.wrapper .logo a {
-    	font-size: 17px;
-		font-weight: 500;
+    	font-size: 20px;
+		font-weight: 600;
   	}
 
   	/* Links */
   	a {
     	font-size: 12px;
+    	font-weight: 200;
     	padding: 1px 5px;
   	}
   
@@ -519,37 +634,42 @@ p {
 	}
 
 	h1 {
-		font-size: 3rem;
+		font-size: 2.5rem;
 		text-align: center;
-		font-weight: normal;
+		font-weight: 600;
 	}
 
 	h2 {
 		font-size: 1.8rem;
-		font-weight: normal;
+		font-weight: 600;
 		padding-bottom: 2rem;
 		text-align: center;
 	}
 
 	h3 {
-		font-size: 1.5rem;
-		font-weight: 800;
+		font-size: 1.3rem;
+		font-weight: 600;
 		padding-top: 1rem;
 	}
 
 	p {
-		font-size: 1.1rem;
+		font-size: 1rem;
+		font-weight: 200;
 	}
 
 	.exhibitions {
-    	font-size: 1.5rem;
-    	font-weight: 800;
+    	font-size: 1.3rem;
+    	font-weight: 600;
 	}
 
   	/* Footer Section */
 	.footer .row .col {
 		text-align: center;
 		font-size: 100%;
+	}
+
+	.footer__section {
+		font-weight: 600;
 	}
 }
 
@@ -569,14 +689,14 @@ p {
   	}
   
   	.wrapper .logo a {
-    	font-size: 15px;
-		font-weight: 500;
+    	font-size: 21px;
+		font-weight: 700;
   	}
 
   	/* Links */
   	a {
     	font-size: 12px;
-    	padding: 1px 5px;
+    	padding: 1px 6px;
   	}
   
   	.socials > a > img {
@@ -596,35 +716,44 @@ p {
 	h1 {
 		font-size: 3rem;
 		text-align: center;
-		font-weight: normal;
+		font-weight: 600;
 	}
 
 	h2 {
 		font-size: 1.8rem;
-		font-weight: normal;
+		font-weight: 600;
 		padding-bottom: 2rem;
 		text-align: center;
 	}
 
 	h3 {
-		font-size: 1.5rem;
-		font-weight: 800;
+		font-size: 1.3rem;
+		font-weight: 600;
 		padding-top: 1rem;
 	}
 
 	p {
-		font-size: 1.1rem;
+		font-size: .9rem;
+		font-weight: 200;
 	}
 
 	.exhibitions {
-    	font-size: 1.5rem;
-    	font-weight: 800;
+    	font-size: 1.3rem;
+    	font-weight: 600;
+	}
+
+	.quote > blockquote {
+		font-size: 1.1rem;
 	}
 
   	/* Footer Section */
 	.footer .row .col {
 		text-align: center;
 		font-size: 100%;
+	}
+
+	.footer__section {
+		font-weight:  600;
 	}
 }
 
@@ -648,13 +777,13 @@ p {
 
 	h1 {
 		font-size: 2.5rem;
-		font-weight: normal;
+		font-weight: 600;
 		text-align: center;
 	}
 
 	h2 {
 		font-size: 1.5rem;
-		font-weight: normal;
+		font-weight: 600;
 		padding-bottom: 2rem;
 	}
 
@@ -664,13 +793,16 @@ p {
 		padding-top: 1rem;
 	}
 
+
+	/* Paragraph */
 	p {
-		font-size: 1rem;
+		font-size: .9rem;
+		font-weight: 200;
 	}
 
 	/* Navbar Section */
 	nav {
-    	width: 105vw;
+    	width: 100vw;
 		line-height: 90px;
   	}
   
@@ -679,19 +811,19 @@ p {
   	}
   
   	.wrapper .logo a {
-    	font-size: 16px;
-		font-weight: normal;
-    	margin-left: -20px;
+    	font-size: 23px;
+		font-weight: 600;
   	}
 
 	/* Links */
   	a {
     	font-size: 12px;
-    	padding: 0px 4px;
+    	font-weight: 200;
+    	padding: 1px 5px;
   	}
 
 	.exhibitions {
-    	font-size: 1rem;
+    	font-size: 1.3rem;
     	font-weight: 800;
 	}
 
@@ -704,6 +836,93 @@ p {
 	.footer .row .col {
 		font-size: 100%;
 		text-align: center;
+	}
+
+	.footer__section {
+		font-weight: 600;
+	}
+}
+
+@media only screen and (max-width: 384px){
+	section {
+		padding: 10px 25px;
+	}
+
+	section > div {
+		padding: 2rem 2rem;
+		box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+		rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+		border-radius:10px;
+		margin-bottom: 2.5rem;
+	}
+
+	/* Header */
+	header {
+		height: 10vh;
+	}
+
+	h1 {
+		font-size: 2.5rem;
+		font-weight: 600;
+		text-align: center;
+	}
+
+	h2 {
+		font-size: 1.5rem;
+		font-weight: 600;
+		padding-bottom: 2rem;
+	}
+
+	h3 {
+		font-size: 1.2rem;
+		font-weight: 600;
+		padding-top: 1rem;
+	}
+
+	p {
+		font-size: .9rem;
+		font-weight: 200;
+	}
+
+	/* Navbar Section */
+	nav {
+    	width: 100vw;
+		line-height: 80px;
+  	}
+
+  	nav .wrapper {
+    	padding: 0 25px;
+  	}
+
+  	.wrapper .logo a {
+    	font-size: 19px;
+		font-weight: 700;
+  	}
+
+	/* Links */
+  	a {
+    	font-size: 12px;
+    	padding: 1px 5px;
+  	}
+
+	.exhibitions {
+    	font-size: 1.2rem;
+    	font-weight: 600;
+	}
+
+	.socials > a > img {
+		width: 15px;
+		height: 15px;
+	}
+
+	/* Footer Section */
+	.footer .row .col {
+		font-size: 100%;
+		text-align: center;
+	}
+
+	.footer__section {
+		font-weight: 600;
 	}
 }
 
@@ -726,31 +945,32 @@ p {
 	}
 
 	h1 {
-		font-size: 2.5rem;
-		font-weight: normal;
+		font-size: 2rem;
+		font-weight: 600;
 		text-align: center;
 	}
 
 	h2 {
 		font-size: 1.5rem;
-		font-weight: normal;
+		font-weight: 600;
 		padding-bottom: 2rem;
 	}
 
 	h3 {
-		font-size: 1.3rem;
+		font-size: 1.2rem;
 		font-weight: 600;
 		padding-top: 1rem;
 	}
 
 	p {
-		font-size: 1rem;
+		font-size: .9rem;
+		font-weight: 200;
 	}
 
 	/* Navbar Section */
 	nav {
-    	width: 105vw;
-		line-height: 90px;
+    	width: 100vw;
+		line-height: 70px;
   	}
   
   	nav .wrapper {
@@ -758,20 +978,19 @@ p {
   	}
   
   	.wrapper .logo a {
-    	font-size: 16px;
-		font-weight: normal;
-    	margin-left: -20px;
+    	font-size: 26px;
+		font-weight: 600;
   	}
 
 	/* Links */
   	a {
-    	font-size: 12px;
-    	padding: 0px 4px;
+    	font-weight: 400;
+    	padding: 1px 5px;
   	}
 
 	.exhibitions {
-    	font-size: 1rem;
-    	font-weight: 800;
+    	font-size: 1.2rem;
+    	font-weight: 600;
 	}
 
 	.socials > a > img {
@@ -783,6 +1002,10 @@ p {
 	.footer .row .col {
 		font-size: 100%;
 		text-align: center;
+	}
+
+	.footer__section {
+		font-weight: 600;
 	}
 }
 
@@ -806,13 +1029,13 @@ p {
 
 	h1 {
 		font-size: 2.5rem;
-		font-weight: normal;
+		font-weight: 600;
 		text-align: center;
 	}
 
 	h2 {
 		font-size: 1.5rem;
-		font-weight: normal;
+		font-weight: 600;
 		padding-bottom: 2rem;
 	}
 
@@ -823,33 +1046,34 @@ p {
 	}
 
 	p {
-		font-size: 1rem;
+		font-size: .9rem;
+		font-weight: 200;
 	}
 
 	/* Navbar Section */
 	nav {
-    	width: 105vw;
+    	width: 103vw;
 		line-height: 90px;
   	}
-  
+
   	nav .wrapper {
-    	padding: 0 28px;
+    	padding: 0px 30px;
   	}
-  
+
   	.wrapper .logo a {
-    	font-size: 15px;
-		font-weight: 500;
+    	font-size: 19px;
+		font-weight: 700;
   	}
 
 	/* Links */
   	a {
-    	font-size: 11px;
-    	padding: 0px 4px;
+    	font-size: 12px;
+    	padding: 1px 6px;
   	}
 
 	.exhibitions {
-    	font-size: 1rem;
-    	font-weight: 800;
+    	font-size: 1.1rem;
+    	font-weight: 600;
 	}
 
 	.socials > a > img {
@@ -861,5 +1085,9 @@ p {
 	.footer .row .col {
 		font-size: 80%;
 		text-align: center;
+	}
+
+	.footer__section {
+		font-weight: 600;
 	}
 }
