--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,7 +1,12 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Raleway', sans-serif;
+  font-size: 14px;
 }
 
 /* Header */
@@ -30,8 +35,8 @@ nav .wrapper {
 
 .wrapper .logo a {
   text-decoration: none;
-  font-size: 27px;
-  font-weight: 500;
+  font-size: 37px;
+  font-weight: 700;
 }
 
 .nav-links {
@@ -44,8 +49,7 @@ nav .wrapper {
 
 a {
   text-decoration: none;
-  font-size: 18px;
-  font-weight: 500;
+  font-weight: 600;
   padding: 9px 15px;
   border-radius: 5px;
   transition: all 0.3s ease;
@@ -97,27 +101,31 @@ a:hover:after {
 }
 
 .contact__section .row h1 {
-    font-size: 500%;
-    font-weight: normal;
+  font-size: 400%;
+  font-weight: 600;
+  text-align: center;
 }
 
 .contact__section .row p {
-  font-size: 380%;
+  font-size: 250%;
+  text-align: center;
 }
 
 .contact__section .row .mail {
   text-decoration: underline;
+  color: #8d8d8d;
   cursor: pointer;
 }
 
 /* -------- Footer Section ------ */
 .footer .row .col {
   padding: 6%;
-  font-size: 120%;
+  font-size: 100%;
 }
 
 .footer__section {
   color: #000000;
+  font-weight: 600;
 }
 
 
@@ -161,6 +169,10 @@ a:hover:after {
     font-size: 100%;
     text-align: center;
   }
+
+  .footer__section {
+    font-weight: 600;
+  }
 }
 
 @media only screen and (max-width: 896px) {
@@ -199,6 +211,10 @@ a:hover:after {
     padding: 6%;
     font-size: 100%;
     text-align: center;
+  }
+
+  .footer__section {
+    font-weight: 600;
   }
 }
 
@@ -239,6 +255,54 @@ a:hover:after {
     font-size: 100%;
     text-align: center;
   }
+
+  .footer__section {
+    font-weight: 600;
+  }
+}
+
+@media only screen and (max-width: 812px) {
+  header {
+    height: 10vh;
+  }
+
+  .wrapper .logo a {
+    font-size: 35px;
+    font-weight: 600;
+  }
+
+  /* Links */
+  a {
+    font-weight: 400;
+    padding: 1px 15px;
+  }
+
+  .contact__section {
+    padding: 40px;
+  }
+
+  .contact__section .row h1 {
+    font-size: 350%;
+    font-weight: 500;
+    text-align: center;
+  }
+
+  .contact__section .row p {
+    font-size: 200%;
+    font-weight: 200;
+    text-align: center;
+  }
+
+  /* Footer Section */
+  .footer .row .col {
+    padding: 6%;
+    font-size: 100%;
+    text-align: center;
+  }
+
+  .footer__section {
+    font-weight: 600;
+  }
 }
 
 /* --------- Small Phones to Small Tablets --------- */
@@ -278,6 +342,10 @@ a:hover:after {
     padding: 4%;
     font-size: 100%;
     text-align: center;
+  }
+
+  .footer__section {
+    font-weight: 600;
   }
 }
 
@@ -333,6 +401,10 @@ a:hover:after {
     font-size: 100%;
     text-align: center;
   }
+
+  .footer__section {
+    font-weight: 600;
+  }
 }
 
 @media screen and (max-width: 428px) {
@@ -347,17 +419,17 @@ a:hover:after {
   }
   
   nav .wrapper {
-    padding: 0 20px;
+    padding: 1px 30px;
   }
   
   .wrapper .logo a {
-    font-size: 17px;
-    font-weight: 500;
+    font-size: 23px;
+    font-weight: 600;
   }
 
   /* Links */
   a {
-    font-size: 12px;
+    font-weight: 400;
     padding: 1px 5px;
   }
   
@@ -372,19 +444,24 @@ a:hover:after {
 
   .contact__section .row h1 {
     font-size: 200%;
-    font-weight: normal;
+    font-weight: 500;
     text-align: center;
   }
 
   .contact__section .row p {
     font-size: 130%;
+    font-weight: 200;
     text-align: center;
   }
   
   /* Footer Section */
   .footer .row .col {
-    font-size: 90%;
+    font-size: 100%;
     text-align: center;
+  }
+
+  .footer__section {
+    font-weight: 600;
   }
 }
 
@@ -400,12 +477,187 @@ a:hover:after {
   }
   
   nav .wrapper {
-    padding: 0 20px;
+    padding: 1px 30px;
   }
   
   .wrapper .logo a {
-    font-size: 17px;
+    font-size: 22px;
+    font-weight: 600;
+  }
+
+  /* Links */
+  a {
+    font-size: 12px;
+    font-weight: 400;
+    padding: 1px 5px;
+  }
+  
+  .socials > a > img {
+    width: 15px;
+    height: 15px;
+  }
+  
+  .contact__section {
+    padding: 20px;
+  }
+
+  .contact__section .row h1 {
+    font-size: 200%;
     font-weight: 500;
+    text-align: center;
+  }
+
+  .contact__section .row p {
+    font-size: 130%;
+    font-weight: 200;
+    text-align: center;
+  }
+  
+  /* Footer Section */
+  .footer .row .col {
+    font-size: 100%;
+    text-align: center;
+  }
+
+  .footer__section {
+    font-weight: 600;
+  }
+}
+
+@media screen and (max-width: 412px) {
+  /* Header */
+  header {
+    height: 10vh;
+  }
+
+  /* Navbar Section */
+  nav {
+    width: 100vw;
+  }
+  
+  nav .wrapper {
+    padding: 1px 30px;
+  }
+  
+  .wrapper .logo a {
+   	font-size: 22px;
+		font-weight: 600;
+  }
+
+  /* Links */
+  a {
+   	font-size: 12px;
+    font-weight: 400;
+   	padding: 1px 5px;
+  }
+  
+  .socials > a > img {
+    width: 15px;
+    height: 15px;
+  }
+  
+  .contact__section {
+    padding: 20px;
+  }
+
+  .contact__section .row h1 {
+    font-size: 200%;
+    font-weight: 500;
+    text-align: center;
+  }
+
+  .contact__section .row p {
+    font-size: 130%;
+    font-weight: 200;
+    text-align: center;
+  }
+  
+  /* Footer Section */
+  .footer .row .col {
+    font-size: 100%;
+    text-align: center;
+  }
+
+  .footer__section {
+    font-weight: 600;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  /* Header */
+  header {
+    height: 10vh;
+  }
+
+  /* Navbar Section */
+  nav {
+    width: 100vw;
+  }
+  
+  nav .wrapper {
+    padding: 1px 30px;
+  }
+  
+  .wrapper .logo a {
+    font-size: 21px;
+    font-weight: 600;
+  }
+
+  /* Links */
+  a {
+    font-size: 12px;
+    font-weight: 400;
+    padding: 1px 5px;
+  }
+  
+  .socials > a > img {
+    width: 15px;
+    height: 15px;
+  }
+  
+  .contact__section {
+    padding: 20px;
+  }
+
+  .contact__section .row h1 {
+    font-size: 200%;
+    font-weight: 500;
+  }
+
+  .contact__section .row p {
+    font-size: 130%;
+    font-weight: 200;
+  }
+  
+  /* Footer Section */
+  .footer .row .col {
+    font-size: 90%;
+    text-align: center;
+  }
+
+  .footer__section {
+    font-weight: 600;
+  }
+}
+
+@media screen and (max-width: 384px) {
+  /* Header */
+  header {
+    height: 10vh;
+  }
+
+  /* Navbar Section */
+  nav {
+    width: 100vw;
+  }
+  
+  nav .wrapper {
+    padding: 0 30px;
+  }
+  
+  .wrapper .logo a {
+    font-size: 20px;
+    font-weight: 600;
   }
 
   /* Links */
@@ -425,117 +677,12 @@ a:hover:after {
 
   .contact__section .row h1 {
     font-size: 200%;
-    font-weight: normal;
-    text-align: center;
+    font-weight: 500;
   }
 
   .contact__section .row p {
     font-size: 130%;
-    text-align: center;
-  }
-  
-  /* Footer Section */
-  .footer .row .col {
-    font-size: 100%;
-    text-align: center;
-  }
-}
-
-@media screen and (max-width: 412px) {
-  /* Header */
-  header {
-    height: 10vh;
-  }
-
-  /* Navbar Section */
-  nav {
-    width: 100vw;
-  }
-  
-  nav .wrapper {
-    padding: 0 20px;
-  }
-  
-  .wrapper .logo a {
-   	font-size: 15px;
-		font-weight: 500;
-  }
-
-  /* Links */
-  a {
-   	font-size: 12px;
-   	padding: 1px 5px;
-  }
-  
-  .socials > a > img {
-    width: 15px;
-    height: 15px;
-  }
-  
-  .contact__section {
-    padding: 20px;
-  }
-
-  .contact__section .row h1 {
-    font-size: 200%;
-    font-weight: normal;
-    text-align: center;
-  }
-
-  .contact__section .row p {
-    font-size: 130%;
-    text-align: center;
-  }
-  
-  /* Footer Section */
-  .footer .row .col {
-    font-size: 80%;
-    text-align: center;
-  }
-}
-
-@media screen and (max-width: 390px) {
-  /* Header */
-  header {
-    height: 10vh;
-  }
-
-  /* Navbar Section */
-  nav {
-    width: 105vw;
-  }
-  
-  nav .wrapper {
-    padding: 0 28px;
-  }
-  
-  .wrapper .logo a {
-    font-size: 16px;
-    margin-left: -20px;
-  }
-
-  /* Links */
-  a {
-    font-size: 12px;
-    padding: 0px 4px;
-  }
-  
-  .socials > a > img {
-    width: 15px;
-    height: 15px;
-  }
-  
-  .contact__section {
-    padding: 20px;
-  }
-
-  .contact__section .row h1 {
-    font-size: 200%;
-    font-weight: normal;
-  }
-
-  .contact__section .row p {
-    font-size: 130%;
+    font-weight: 200;
   }
   
   /* Footer Section */
@@ -543,56 +690,9 @@ a:hover:after {
     font-size: 90%;
     text-align: center;
   }
-}
 
-@media screen and (max-width: 384px) {
-  /* Header */
-  header {
-    height: 10vh;
-  }
-
-  /* Navbar Section */
-  nav {
-    width: 105vw;
-  }
-  
-  nav .wrapper {
-    padding: 0 28px;
-  }
-  
-  .wrapper .logo a {
-    font-size: 16px;
-    margin-left: -20px;
-  }
-
-  /* Links */
-  a {
-    font-size: 12px;
-    padding: 0px 4px;
-  }
-  
-  .socials > a > img {
-    width: 15px;
-    height: 15px;
-  }
-  
-  .contact__section {
-    padding: 20px;
-  }
-
-  .contact__section .row h1 {
-    font-size: 200%;
-    font-weight: normal;
-  }
-
-  .contact__section .row p {
-    font-size: 130%;
-  }
-  
-  /* Footer Section */
-  .footer .row .col {
-    font-size: 90%;
-    text-align: center;
+  .footer__section {
+    font-weight: 600;
   }
 }
 
@@ -604,22 +704,23 @@ a:hover:after {
 
   /* Navbar Section */
   nav {
-    width: 105vw;
+    width: 100vw;
   }
   
   nav .wrapper {
-    padding: 0 28px;
+    padding: 1px 30px;
   }
   
   .wrapper .logo a {
-    font-size: 16px;
-    margin-left: -20px;
+    font-size: 21px;
+    font-weight: 600;
   }
 
   /* Links */
   a {
     font-size: 12px;
-    padding: 0px 4px;
+    font-weight: 400;
+    padding: 1px 5px;
   }
   
   .socials > a > img {
@@ -633,17 +734,22 @@ a:hover:after {
 
   .contact__section .row h1 {
     font-size: 200%;
-    font-weight: normal;
+    font-weight: 500;
   }
 
   .contact__section .row p {
     font-size: 130%;
+    font-weight: 200;
   }
   
   /* Footer Section */
   .footer .row .col {
     font-size: 100%;
     text-align: center;
+  }
+
+  .footer__section {
+    font-weight: 600;
   }
 }
 
@@ -655,21 +761,22 @@ a:hover:after {
 
   /* Navbar Section */
   nav {
-    width: 105vw;
+    width: 100vw;
   }
   
   nav .wrapper {
-    padding: 0 28px;
+    padding: 1px 30px;
   }
   
   .wrapper .logo a {
-    font-size: 15px;
+    font-size: 19px;
+    font-weight: 600;
   }
 
   /* Links */
   a {
-    font-size: 11px;
-    padding: 0px 4px;
+    font-size: 12px;
+    padding: 1px 5px;
   }
   
   .socials > a > img {
@@ -683,16 +790,21 @@ a:hover:after {
 
   .contact__section .row h1 {
     font-size: 200%;
-    font-weight: normal;
+    font-weight: 500;
   }
 
   .contact__section .row p {
     font-size: 130%;
+    font-weight: 200;
   }
   
   /* Footer Section */
   .footer .row .col {
-    font-size: 80%;
+    font-size: 90%;
     text-align: center;
+  }
+
+  .footer__section {
+    font-weight: 600;
   }
 }
