--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,4 @@
 /* Root */
-@font-face {
-	font-family: HKGrotesk;
-	src: url("/Fonts/HKGrotesk-Medium.woff") format("woff");
-}
-
 * {
 	padding: 0;
 	margin: 0;
@@ -11,8 +6,8 @@
 }
 
 body {
-	font-family: HKGrotesk;
-	font-size: 18px;
+	font-family: 'Raleway', sans-serif;
+	font-size: 14px;
 }
 
 /* Navbar Section */
@@ -20,7 +15,6 @@ nav {
 	position: fixed;
 	width: 100%;
 	z-index: 999;
-	/*height: 85px;*/
 	line-height: 120px;
 }
 
@@ -37,7 +31,8 @@ nav .wrapper {
 .wrapper .logo a {
 	color: #000000;
 	text-decoration: none;
-	font-size: 27px;
+	font-size: 37px;
+	font-weight: 700;
 }
 
 .nav-links {
@@ -51,8 +46,7 @@ nav .wrapper {
 a {
 	color: #000000;
 	text-decoration: none;
-	font-size: 18px;
-	font-weight: 500;
+	font-weight: 600;
 	padding: 9px 15px;
 	border-radius: 5px;
 	transition: all 0.3s ease;
@@ -72,7 +66,7 @@ a:after {
 	width: 0;
 }
 a:hover:after { 
-	width: 100%; 
+	width: 90%;
 	left: 0; 
 }
 
@@ -94,6 +88,26 @@ a:hover:after {
 
 /* MEDIA QUERIES */
 /* ---------- Small Phones to Small Tablets ---------- */
+@media screen and (max-width: 810px) {
+	.wrapper .logo a {
+		font-size: 42px;
+		font-weight: 600;
+	}
+
+	/* Links */
+	a {
+		/*font-size: 1px;*/
+		font-weight: 400;
+		padding: 1px 15px;
+	}
+
+	/* Footer Section */
+	/* .footer .row .col {
+		padding: 6%;
+		font-size: 100%;
+	} */
+}
+
 @media screen and (max-width: 768px) {
 	.wrapper .logo a {
 		font-size: 22px;
@@ -157,18 +171,19 @@ a:hover:after {
   }
   
   nav .wrapper {
-    padding: 0 28px;
+    padding: 0 30px;
   }
   
   .wrapper .logo a {
-   	font-size: 15px;
-		font-weight: 500;
+   	font-size: 23px;
+		font-weight: 600;
   }
 
   /* Links */
   a {
-   	font-size: 11px;
-   	padding: 0px 4px;
+   	font-size: 13px;
+   	font-weight: 400;
+   	padding: 1px 5px;
   }
   
   .socials > a > img {
@@ -189,18 +204,18 @@ a:hover:after {
   }
   
   nav .wrapper {
-    padding: 0 28px;
+    padding: 0 30px;
   }
   
   .wrapper .logo a {
-   	font-size: 15px;
-		font-weight: 500;
+   	font-size: 23px;
+		font-weight: 600;
   }
 
   /* Links */
   a {
-   	font-size: 11px;
-   	padding: 0px 4px;
+   	font-weight: 400;
+   	padding: 1px 5px;
   }
   
   .socials > a > img {
@@ -226,13 +241,13 @@ a:hover:after {
   }
   
   .wrapper .logo a {
-   	font-size: 15px;
-		font-weight: 500;
+   	font-size: 23px;
+		font-weight: 600;
   }
 
   /* Links */
   a {
-   	font-size: 12px;
+  	font-weight: 400;
    	padding: 1px 5px;
   }
   
@@ -251,7 +266,7 @@ a:hover:after {
 	/* Navbar Section */
 	nav {
 		line-height: 70px;
-		width: 105vw;
+		width: 100vw;
 	}
 	
 	nav .wrapper {
@@ -259,14 +274,15 @@ a:hover:after {
 	}
 	
 	.wrapper .logo a {
-		font-size: 15px;
-		font-weight: 500;
+		font-size: 22px;
+		font-weight: 600;
 	}
 
 	/* Links */
 	a {
-		font-size: 11px;
-		padding: 0px 4px;
+		font-size: 12px;
+		font-weight: 400;
+		padding: 1px 5px;
 	}
 	
 	.socials > a > img {
@@ -291,7 +307,7 @@ a:hover:after {
 	/* Navbar Section */
 	nav {
 		line-height: 70px;
-		width: 105vw;
+		width: 100vw;
 	}
 	
 	nav .wrapper {
@@ -299,14 +315,13 @@ a:hover:after {
 	}
 	
 	.wrapper .logo a {
-		font-size: 15px;
-		font-weight: 500;
+		font-size: 23px;
+		font-weight: 600;
 	}
 
 	/* Links */
 	a {
-		font-size: 11px;
-		padding: 0px 4px;
+		padding: 1px 5px;
 	}
 	
 	.socials > a > img {
@@ -331,22 +346,23 @@ a:hover:after {
 	/* Navbar Section */
 	nav {
 		line-height: 70px;
-		width: 105vw;
+		width: 100vw;
 	}
 	
 	nav .wrapper {
-		padding: 0 28px;
+		padding: 0 30px;
 	}
 	
 	.wrapper .logo a {
-		font-size: 16px;
-		margin-left: -20px;
+		font-size: 23px;
+		font-weight: 600;
 	}
 
 	/* Links */
 	a {
 		font-size: 12px;
-		padding: 0px 4px;
+		font-weight: 400;
+		padding: 1px 5px;
 	}
 	
 	.socials > a > img {
@@ -370,7 +386,7 @@ a:hover:after {
 	/* Navbar Section */
 	nav {
 		line-height: 70px;
-		width: 105vw;
+		width: 100vw;
 	}
 	
 	nav .wrapper {
@@ -378,14 +394,15 @@ a:hover:after {
 	}
 	
 	.wrapper .logo a {
-		font-size: 15px;
-		font-weight: 500;
+		font-size: 20px;
+		font-weight: 600;
 	}
 
 	/* Links */
 	a {
-		font-size: 11px;
-		padding: 0px 4px;
+		font-size: 12px;
+		font-weight: 400;
+		padding: 1px 5px;
 	}
 	
 	.socials > a > img {
